test/zinc_source/compile_errors/callables/03_callable_set_element.zn
// expected-error: set element cannot be a callable in v1
fn inc(x) {
    return x + 1
}

fn main() {
    values = {
        inc
    }
    print(values.len())
}
